// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is equals: Expect text field not to be displayed since the match type is not equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is equals: Expect text field to be displayed since match type is equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="d-flex flex-column gap-1"
      >
        <input
          class="form-control"
          placeholder="Enter text search value..."
          type="text"
          value="test"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is in or not in: Expect text field to be displayed with a different placeholder. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="d-flex flex-column gap-1"
      >
        <input
          class="form-control"
          placeholder="Enter comma-separated values..."
          type="text"
          value="test1, test2, test3"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is in or not in: Expect text field to be displayed with a different placeholder. 2`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="d-flex flex-column gap-1"
      >
        <input
          class="form-control"
          placeholder="Enter comma-separated values..."
          type="text"
          value="test1, test2, test3"
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function ContainsText (Infix) operation Normal field 1`] = `
{
  "match": {
    "data.attributes.textField.infix": {
      "query": "text search",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function ContainsText (Infix) operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "match": {
              "included.attributes.name.infix": {
                "query": "text search",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function ContainsText (Infix) operation With relationship containing complex path as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "match": {
              "included.attributes.determination.scientificName.infix": {
                "query": "text",
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `{}`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Empty operation Normal field 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.textField",
            },
          },
        },
      },
      {
        "term": {
          "data.attributes.textField.keyword": "",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Empty operation With relationship as field 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collection",
                  },
                },
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must_not": {
                            "exists": {
                              "field": "includes.name",
                            },
                          },
                        },
                      },
                      {
                        "term": {
                          "includes.name.keyword": "",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "collection",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function EndsWith operation Normal field 1`] = `
{
  "prefix": {
    "data.attributes.textField.prefix_reverse": "hcraes txet",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function EndsWith operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.name.prefix_reverse": "hcraes txet",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function EndsWith operation With relationship containing complex path as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.determination.scientificName.prefix_reverse": "txet",
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation Normal field 1`] = `
{
  "term": {
    "data.attributes.textField": "text search",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.name.keyword": "text search",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation With relationship containing complex path as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.determination.scientificName.keyword": "text search",
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation with boolean-like values Normal field 1`] = `
{
  "term": {
    "data.attributes.textField": "true",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation with boolean-like values With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "includes.name.keyword": "false",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Exact Match operation Normal field 1`] = `
{
  "term": {
    "data.attributes.textField.keyword": "text search",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Exact Match operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "includes.name.keyword": "text search",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not Equals operation Normal field 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "data.attributes.textField": "text search",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "data.attributes.textField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not Equals operation With relationship as field 1`] = `
{
  "bool": {
    "must_not": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "collection",
                  },
                },
                {
                  "term": {
                    "includes.name": "text search",
                  },
                },
              ],
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not empty operation Normal field 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "data.attributes.textField",
        },
      },
    ],
    "must_not": {
      "term": {
        "data.attributes.textField.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not empty operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "includes.name",
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
        "must_not": {
          "term": {
            "includes.name.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function contains (wildcard) operation Normal field 1`] = `
{
  "wildcard": {
    "data.attributes.textField": {
      "case_insensitive": true,
      "value": "*text search*",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function contains (wildcard) operation With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "wildcard": {
              "included.attributes.name.keyword": {
                "case_insensitive": true,
                "value": "*text search*",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function contains (wildcard) operation With relationship containing complex path as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "wildcard": {
              "included.attributes.determination.scientificName": {
                "case_insensitive": true,
                "value": "*text*",
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function in operator Normal field - over 100 items (case-sensitive terms query) 1`] = `
{
  "bool": {
    "must": {
      "terms": {
        "data.attributes.textField": [
          "test1",
          "test2",
          "test3",
          "test4",
          "test5",
          "test6",
          "test7",
          "test8",
          "test9",
          "test10",
          "test11",
          "test12",
          "test13",
          "test14",
          "test15",
          "test16",
          "test17",
          "test18",
          "test19",
          "test20",
          "test21",
          "test22",
          "test23",
          "test24",
          "test25",
          "test26",
          "test27",
          "test28",
          "test29",
          "test30",
          "test31",
          "test32",
          "test33",
          "test34",
          "test35",
          "test36",
          "test37",
          "test38",
          "test39",
          "test40",
          "test41",
          "test42",
          "test43",
          "test44",
          "test45",
          "test46",
          "test47",
          "test48",
          "test49",
          "test50",
          "test51",
          "test52",
          "test53",
          "test54",
          "test55",
          "test56",
          "test57",
          "test58",
          "test59",
          "test60",
          "test61",
          "test62",
          "test63",
          "test64",
          "test65",
          "test66",
          "test67",
          "test68",
          "test69",
          "test70",
          "test71",
          "test72",
          "test73",
          "test74",
          "test75",
          "test76",
          "test77",
          "test78",
          "test79",
          "test80",
          "test81",
          "test82",
          "test83",
          "test84",
          "test85",
          "test86",
          "test87",
          "test88",
          "test89",
          "test90",
          "test91",
          "test92",
          "test93",
          "test94",
          "test95",
          "test96",
          "test97",
          "test98",
          "test99",
          "test100",
          "test101",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function in operator Normal field - under threshold (case-insensitive term query) 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "data.attributes.textField": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "data.attributes.textField": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          {
            "term": {
              "data.attributes.textField": {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function in operator Relationship field - over 100 items 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "terms": {
                  "included.attributes.determination.scientificName.keyword": [
                    "test1",
                    "test2",
                    "test3",
                    "test4",
                    "test5",
                    "test6",
                    "test7",
                    "test8",
                    "test9",
                    "test10",
                    "test11",
                    "test12",
                    "test13",
                    "test14",
                    "test15",
                    "test16",
                    "test17",
                    "test18",
                    "test19",
                    "test20",
                    "test21",
                    "test22",
                    "test23",
                    "test24",
                    "test25",
                    "test26",
                    "test27",
                    "test28",
                    "test29",
                    "test30",
                    "test31",
                    "test32",
                    "test33",
                    "test34",
                    "test35",
                    "test36",
                    "test37",
                    "test38",
                    "test39",
                    "test40",
                    "test41",
                    "test42",
                    "test43",
                    "test44",
                    "test45",
                    "test46",
                    "test47",
                    "test48",
                    "test49",
                    "test50",
                    "test51",
                    "test52",
                    "test53",
                    "test54",
                    "test55",
                    "test56",
                    "test57",
                    "test58",
                    "test59",
                    "test60",
                    "test61",
                    "test62",
                    "test63",
                    "test64",
                    "test65",
                    "test66",
                    "test67",
                    "test68",
                    "test69",
                    "test70",
                    "test71",
                    "test72",
                    "test73",
                    "test74",
                    "test75",
                    "test76",
                    "test77",
                    "test78",
                    "test79",
                    "test80",
                    "test81",
                    "test82",
                    "test83",
                    "test84",
                    "test85",
                    "test86",
                    "test87",
                    "test88",
                    "test89",
                    "test90",
                    "test91",
                    "test92",
                    "test93",
                    "test94",
                    "test95",
                    "test96",
                    "test97",
                    "test98",
                    "test99",
                    "test100",
                    "test101",
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function in operator Relationship field - under threshold 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.determination.scientificName.keyword": {
                          "case_insensitive": true,
                          "value": "Homo sapiens",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.determination.scientificName.keyword": {
                          "case_insensitive": true,
                          "value": "Canis lupus",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function not in operator Normal field - over 100 items (case-sensitive terms query) 1`] = `
{
  "bool": {
    "must_not": {
      "terms": {
        "data.attributes.textField": [
          "test1",
          "test2",
          "test3",
          "test4",
          "test5",
          "test6",
          "test7",
          "test8",
          "test9",
          "test10",
          "test11",
          "test12",
          "test13",
          "test14",
          "test15",
          "test16",
          "test17",
          "test18",
          "test19",
          "test20",
          "test21",
          "test22",
          "test23",
          "test24",
          "test25",
          "test26",
          "test27",
          "test28",
          "test29",
          "test30",
          "test31",
          "test32",
          "test33",
          "test34",
          "test35",
          "test36",
          "test37",
          "test38",
          "test39",
          "test40",
          "test41",
          "test42",
          "test43",
          "test44",
          "test45",
          "test46",
          "test47",
          "test48",
          "test49",
          "test50",
          "test51",
          "test52",
          "test53",
          "test54",
          "test55",
          "test56",
          "test57",
          "test58",
          "test59",
          "test60",
          "test61",
          "test62",
          "test63",
          "test64",
          "test65",
          "test66",
          "test67",
          "test68",
          "test69",
          "test70",
          "test71",
          "test72",
          "test73",
          "test74",
          "test75",
          "test76",
          "test77",
          "test78",
          "test79",
          "test80",
          "test81",
          "test82",
          "test83",
          "test84",
          "test85",
          "test86",
          "test87",
          "test88",
          "test89",
          "test90",
          "test91",
          "test92",
          "test93",
          "test94",
          "test95",
          "test96",
          "test97",
          "test98",
          "test99",
          "test100",
          "test101",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function not in operator Normal field - under threshold (case-insensitive term query) 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "data.attributes.textField": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "data.attributes.textField": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          {
            "term": {
              "data.attributes.textField": {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function not in operator Relationship field - over 100 items 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "terms": {
                  "included.attributes.determination.scientificName.keyword": [
                    "test1",
                    "test2",
                    "test3",
                    "test4",
                    "test5",
                    "test6",
                    "test7",
                    "test8",
                    "test9",
                    "test10",
                    "test11",
                    "test12",
                    "test13",
                    "test14",
                    "test15",
                    "test16",
                    "test17",
                    "test18",
                    "test19",
                    "test20",
                    "test21",
                    "test22",
                    "test23",
                    "test24",
                    "test25",
                    "test26",
                    "test27",
                    "test28",
                    "test29",
                    "test30",
                    "test31",
                    "test32",
                    "test33",
                    "test34",
                    "test35",
                    "test36",
                    "test37",
                    "test38",
                    "test39",
                    "test40",
                    "test41",
                    "test42",
                    "test43",
                    "test44",
                    "test45",
                    "test46",
                    "test47",
                    "test48",
                    "test49",
                    "test50",
                    "test51",
                    "test52",
                    "test53",
                    "test54",
                    "test55",
                    "test56",
                    "test57",
                    "test58",
                    "test59",
                    "test60",
                    "test61",
                    "test62",
                    "test63",
                    "test64",
                    "test65",
                    "test66",
                    "test67",
                    "test68",
                    "test69",
                    "test70",
                    "test71",
                    "test72",
                    "test73",
                    "test74",
                    "test75",
                    "test76",
                    "test77",
                    "test78",
                    "test79",
                    "test80",
                    "test81",
                    "test82",
                    "test83",
                    "test84",
                    "test85",
                    "test86",
                    "test87",
                    "test88",
                    "test89",
                    "test90",
                    "test91",
                    "test92",
                    "test93",
                    "test94",
                    "test95",
                    "test96",
                    "test97",
                    "test98",
                    "test99",
                    "test100",
                    "test101",
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function not in operator Relationship field - under threshold 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.determination.scientificName.keyword": {
                          "case_insensitive": true,
                          "value": "Homo sapiens",
                        },
                      },
                    },
                    {
                      "term": {
                        "included.attributes.determination.scientificName.keyword": {
                          "case_insensitive": true,
                          "value": "Canis lupus",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Non-optimized) Normal field 1`] = `
{
  "prefix": {
    "data.attributes.textField": {
      "case_insensitive": true,
      "value": "text search",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Non-optimized) With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.name": {
                "case_insensitive": true,
                "value": "text search",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Non-optimized) With relationship containing complex path as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.determination.scientificName": {
                "case_insensitive": true,
                "value": "text",
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Optimized) Normal field 1`] = `
{
  "prefix": {
    "data.attributes.textField.prefix": {
      "case_insensitive": true,
      "value": "text search",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Optimized) With relationship as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.name.prefix": {
                "case_insensitive": true,
                "value": "text search",
              },
            },
          },
          {
            "term": {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Optimized) With relationship containing complex path as field 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.determination.scientificName.prefix": {
                "case_insensitive": true,
                "value": "text",
              },
            },
          },
          {
            "term": {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;
